# cookiecutter-pypackage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  copier.yml  mkdocs.yml  pyproject.toml  schema.yaml  versions.json
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
.github/workflows/: commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  release.yml
develop/: 404.html  index.html
develop/CHANGELOG/: index.html
develop/CONTRIBUTING/: index.html
develop/schema/: index.html
develop/search/: search_index.json
develop/stay_updated/: index.html
develop/tutorial/: index.html
docs/: configuration.md  stay_updated.md  tutorial.md
docs/static/: hooks.py
hooks/: post_gen_project.py  pre_gen_project.py
latest/schema/: index.html
requirements/: base.txt  dev.txt
src/{{cookiecutter.repository_name}}/.github/ISSUE_TEMPLATE/: DOCS.yml
src/{{cookiecutter.repository_name}}/.github/workflows/: daily-scheduled-ci.yml  pr-ci.yml
src/{{cookiecutter.repository_name}}/docs/: installation.md
src/{{cookiecutter.repository_name}}/docs/api/: cli.md
src/{{cookiecutter.repository_name}}/docs/overrides/: main.html
src/{{cookiecutter.repository_name}}/docs/static/: hooks.py
src/{{cookiecutter.repository_name}}/requirements/: dev.txt
template/: .pre-commit-config.yaml  CONTRIBUTING.md.jinja
template/.github/ISSUE_TEMPLATE/: BUG-REPORT.yml.jinja  DOCS.yml.jinja  FEATURE-REQUEST.yml.jinja
template/.github/workflows/: daily-scheduled-ci.yml.jinja
template/src/{{module_name}}/: {% if command_line_interface %}cli.py{% endif %}.jinja
template/tests/: conftest.py.jinja  test_100_memory_profiling.py  test_core.py.jinja
template/{% if create_jupyter_notebook_directory %}examples{% endif %}/: 1_intro_to_{{module_name}}.ipynb.jinja
template/{{repository_name}}/: CONTRIBUTING.md.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if create_authors_file %}AUTHORS.md.jinja{% endif %}  {% if open_source_license == 'Apache-2.0' %}LICENSE.jinja{% endif %}  {% if open_source_license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if open_source_license == 'BSD' %}LICENSE.jinja{% endif %}  {% if open_source_license == 'BSD' %}LICENSE{% endif %}.jinja  {% if open_source_license == 'GPL-v3' %}LICENSE.jinja{% endif %}  {% if open_source_license == 'GPL-v3' %}LICENSE{% endif %}.jinja  {% if open_source_license == 'MIT' %}LICENSE.jinja{% endif %}  {% if open_source_license == 'MIT' %}LICENSE{% endif %}.jinja
template/{{repository_name}}/.github/workflows/: commit-ci.yml.jinja  daily-scheduled-ci.yml.jinja  docs.yml.jinja  pr-ci.yml.jinja  release.yml.jinja  {% if upload_conda_package or upload_pip_package %}pre-release.yml.jinja{% endif %}  {% if upload_conda_package | upload_pip_package %}pre-release.yml.jinja{% endif %}
template/{{repository_name}}/docs/: contributing.md.jinja  installation.md.jinja
template/{{repository_name}}/docs/api/: {% if command_line_interface %}cli.md.jinja{% endif %}
template/{{repository_name}}/docs/overrides/: {%- if create_jupyter_notebook_directory %}main.html.jinja{% endif %}
template/{{repository_name}}/docs/static/: extras.css.jinja  hooks.py.jinja
template/{{repository_name}}/requirements/: dev.txt.jinja
template/{{repository_name}}/src/{{module_name}}/: __init__.py.jinja
template/{{repository_name}}/tests/: conftest.py.jinja  {% if command_line_interface %}test_cli.md.jinja{% endif %}
template/{{repository_name}}/{% if upload_conda_package %}conda.recipe{% endif %}/: meta.yaml.jinja
tests/: test_bake_project.py  test_copy_project.py  test_schema.py
v0.1.0/CHANGELOG/: index.html
v0.1.0/search/: search_index.json
v0.2.0/CHANGELOG/: index.html
v0.2.0/CONTRIBUTING/: index.html
v0.2.0/schema/: index.html
v0.2.0/search/: search_index.json
v0.2.0/stay_updated/: index.html
v0.2.0/tutorial/: index.html
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
{{cookiecutter.project_slug}}/.github/workflows/: commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  pre-release.yml  release.yml
{{cookiecutter.project_slug}}/conda.recipe/: meta.yaml
{{cookiecutter.project_slug}}/docs/: contributing.md  index.md  installation.md
{{cookiecutter.project_slug}}/docs/api/: cli.md
{{cookiecutter.project_slug}}/docs/static/: hooks.py
{{cookiecutter.project_slug}}/examples/: 01_intro_to_{{cookiecutter.project_slug}}.ipynb
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.repository_name}}/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.repository_name}}/.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
{{cookiecutter.repository_name}}/.github/workflows/: cache-ci.yml  commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  pre-release.yml  release.yml
{{cookiecutter.repository_name}}/conda.recipe/: meta.yaml
{{cookiecutter.repository_name}}/docs/: contributing.md  installation.md
{{cookiecutter.repository_name}}/docs/overrides/: main.html
{{cookiecutter.repository_name}}/docs/static/: extras.css  hooks.py
{{cookiecutter.repository_name}}/requirements/: dev.txt
{{cookiecutter.repository_name}}/src/{{cookiecutter.module_name}}/: __init__.py  cli.py
{{cookiecutter.repository_name}}/tests/: conftest.py  test_cli.py  test_core.py
{{cookiecutter.repository_name}}/{{cookiecutter.package_name}}/: __init__.py  cli.py
